# az_storage_example

./: Cargo.toml  README.md  run.sh
src/: main.rs
