[package]
name = "az_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.13.0"
azure_storage = "0.13.0"
azure_storage_blobs = "0.13.1"
futures = "0.3.17"
tokio = { version = "1", features = ["full"] }